plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.15'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'bitcamp'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }

    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

repositories {
    mavenCentral()
}

bootJar {
    archiveFileName = 'app.jar' // JAR 파일의 이름을 변경합니다.
}


dependencies {
    // json-simple 라이브러리
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    // lombok 라이브러리
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    // Spring JDBC 관련 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // Mybatis 관련 라이브러리
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.1'

    // Redis 관련 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Spring WebMVC 관련 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Thymeleaf 관련 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'


    // Lombok 관련 라이브러리
//    compileOnly 'org.projectlombok:lombok'
//    annotationProcessor 'org.projectlombok:lombok'

    // 개발 보조 라이브러리
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // MySQL JDBC 라이브러리
    implementation 'mysql:mysql-connector-java:8.0.32'


    // Amazon AWS Java SDK s3
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.530'

    // Spring 설정을 도와주는 라이브러리
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    //SSH 터널링을 위해 JSch(Java Secure Channel) 라이브러리
    implementation 'com.jcraft:jsch:0.1.55'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.1'

}

tasks.named('test') {
    useJUnitPlatform()
}


//앱이름-plain.jar를 생성제어
jar {
    enabled = false
}





